# vgc-mcp

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  FAQ.md  LICENSE  LOCAL_SETUP.md  PROJECT_OVERVIEW.md  README.md  RENDER_DEPLOYMENT_STEPS.md  SETUP_GUIDE.md  TECHNICAL_GUIDE.md  USER_GUIDE.md  VGC_MCP_Guide.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  setup.bat  setup.sh  test_deploy.py
.claude/: settings.local.json
src/vgc_mcp/: README.md  __init__.py  __main__.py  server.py  server_lite.py  setup.py
src/vgc_mcp/api/: README.md  pokeapi.py  pokepaste.py
src/vgc_mcp/calc/: README.md  __init__.py  bulk_optimization.py  coverage.py  damage.py  items.py  matchup.py  meta_threats.py  modifiers.py  priority.py  speed.py  speed_probability.py  stats.py
src/vgc_mcp/data/: spread_presets.py
src/vgc_mcp/models/: README.md  __init__.py  move.py  pokemon.py  team.py
src/vgc_mcp/rules/: README.md  __init__.py  item_clause.py  restricted.py  vgc_rules.py
src/vgc_mcp/team/: README.md  (+3 more)
src/vgc_mcp_core/: __init__.py  config.py
src/vgc_mcp_lite/: __init__.py  __main__.py  server.py
src/vgc_mcp_micro/: __init__.py  __main__.py  server.py
src/vgc_mcp_shared/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_abilities.py  test_ability_tools.py  test_api_clients.py  test_build_checker_tools.py  test_build_tools.py  test_bulk_calc.py  test_bulk_calc_tools.py  test_bulk_optimization.py  test_chip_damage.py  test_chip_damage_tools.py  test_competitive_speed_tiers.py  test_context_tools.py  test_core_builder.py  test_core_tools.py  test_coverage.py  test_coverage_tools.py  test_damage.py  test_damage_tools.py  test_diff_tools.py  test_education_tools.py  test_ev_efficiency.py  test_game_plan.py  test_game_plan_tools.py  test_glossary_tools.py  test_help_tools.py  test_helping_hand.py  test_hp_optimization.py  test_import_export_tools.py  test_item_optimization.py  test_item_optimization_tools.py  test_item_tools.py  test_lead_tools.py  test_learnset.py  test_legality.py  test_legality_tools.py  test_life_orb_sheer_force.py  test_manual_ev_input.py  (+43 more)
(+137 files in other folders)
