[project]
name = "vgc-mcp"
version = "0.1.0"
description = "VGC Pokemon Team Builder MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "diskcache>=5.6.0",
    "mcp-ui-server>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
remote = [
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.scripts]
vgc-mcp = "vgc_mcp.server:main"
vgc-mcp-http = "vgc_mcp.server:main_http"
vgc-mcp-lite = "vgc_mcp_lite.server:main"
vgc-mcp-lite-http = "vgc_mcp_lite.server:main_http"
vgc-mcp-micro = "vgc_mcp_micro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vgc_mcp_core", "src/vgc_mcp", "src/vgc_mcp_lite", "src/vgc_mcp_micro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
